--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,12 @@
 /Cup.class
+/IntroToJUnit.class
 /Kettle$Water.class
 /Kettle.class
 /Microwave.class
+/Minion.class
 /MinionTest.class
+/Platypus.class
 /Popcorn.class
 /TeaBag.class
 /TeaMaker.class
-/Platypus.class
 /driver.class
-/IntroToJUnit.class
