Haunted-Spot The Error Finished

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,16 +1,17 @@
 /IntroToJUnit.class
 /JamesBond.class
-/Microwave.class
-/Minion.class
-/MinionTest.class
-/Platypus.class
-/Popcorn.class
 /Cup.class
 /Kettle$Water.class
 /Kettle.class
+/Microwave.class
+/Minion.class
+/MinionTest.class
+/NoodleSpotTheError.class
+/Platypus.class
+/Popcorn.class
 /TeaBag.class
 /TeaMaker.class
 /Vault.class
 /driver.class
-/methodconstructors.class
-/NoodleSpotTheError.class
+/NinjaSpotTheErrors.class
+/HauntedSpotTheError.class
